<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editUserInfoPage_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5" >

    <com.byecar.byecarplus.views.TitleBar
        android:id="@+id/editUserInfoPage_titleBar"
        android:layout_width="match_parent"
    	android:layout_height="0dp" />
    
    <ScrollView
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/editUserInfoPage_titleBar"
    	android:fillViewport="true" >
        
        <RelativeLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content" >

            <FrameLayout
                android:id="@+id/editUserInfoPage_profileFrame"
                android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_alignParentTop="true" >
                
                <Button
                    android:id="@+id/editUserInfoPage_btnProfile"
                    android:layout_width="match_parent"
		        	android:layout_height="match_parent"
		        	android:background="@drawable/sign1_picture_btn" />
                
                <ImageView
                    android:id="@+id/editUserInfoPage_ivProfile"
                    android:layout_width="match_parent"
		        	android:layout_height="match_parent"
		        	android:scaleType="centerCrop" />
                
                <View
                    android:layout_width="match_parent"
		        	android:layout_height="match_parent"
		        	android:background="@drawable/sign1_frame" />
                
            </FrameLayout>
            
            <TextView
		        android:id="@+id/editUserInfoPage_tvProfile"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/touchCameraIcon"
		        android:textColor="#000"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/editUserInfoPage_profileFrame" />
            
            <TextView
		        android:id="@+id/editUserInfoPage_tvBaseInfo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/commonInfo"
		        android:textColor="#000"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/editUserInfoPage_tvProfile" />
		    
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/editUserInfoPage_etName"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/editUserInfoPage_tvBaseInfo" />
		    
		    <TextView
		        android:id="@+id/editUserInfoPage_tvCheckName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/editUserInfoPage_etName"
		        android:layout_above="@id/editUserInfoPage_etName" />
		    
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/editUserInfoPage_etNickname"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/editUserInfoPage_etName" />
		    
		    <TextView
		        android:id="@+id/editUserInfoPage_tvCheckNickname"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/editUserInfoPage_etNickname"
		        android:layout_above="@id/editUserInfoPage_etNickname" />
		        
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/editUserInfoPage_etAddress"
		        android:layout_width="0dp"
		        android:layout_height="0dp" 
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/editUserInfoPage_etNickname" />
		    
			<TextView
		        android:id="@+id/editUserInfoPage_tvCheckAddress"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:text="@string/checkPassword"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/editUserInfoPage_etAddress"
		        android:layout_above="@id/editUserInfoPage_etAddress" />
		    
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/editUserInfoPage_etAddressConfirm"
		        android:layout_width="0dp"
		        android:layout_height="0dp" 
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/editUserInfoPage_etAddress" />

			<TextView
		        android:id="@+id/editUserInfoPage_tvCheckAddressConfirm"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:text="@string/checkPasswordConfirm"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/editUserInfoPage_etAddressConfirm"
		        android:layout_above="@id/editUserInfoPage_etAddressConfirm" />
			
			<View
                android:id="@+id/editUserInfoPage_lineAfterInfo"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_below="@id/editUserInfoPage_tvCheckAddressConfirm"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="20dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginBottom="20dp"
		        android:background="@color/holo_text_hint" />
			
			<TextView
		        android:id="@+id/editUserInfoPage_tvCertifyPhoneNumber"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/editUserInfoPage_lineAfterInfo"
		        android:gravity="center_vertical"
		        android:text="@string/certifyPhoneNumber"
		        android:textColor="@color/holo_text" />
		    		
			<Button 
                android:id="@+id/editUserInfoPage_btnEditPhoneNumber"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignParentRight="true"
		        android:layout_alignTop="@id/editUserInfoPage_tvCertifyPhoneNumber"
		        android:background="@drawable/user_phone_setting_btn" />
			
			<TextView
		        android:id="@+id/editUserInfoPage_tvPhoneNumber"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/editUserInfoPage_tvCertifyPhoneNumber"
		        android:gravity="center_vertical" />
			
			<View
                android:id="@+id/editUserInfoPage_lineAfterPhoneNumber"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_below="@id/editUserInfoPage_tvPhoneNumber"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="20dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginBottom="20dp"
		        android:background="@color/holo_text_hint" />
			
		    <Button 
		        android:id="@+id/editUserInfoPage_btnConfirm"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:background="@drawable/user_done_btn" 
		        android:layout_centerHorizontal="true"
		        android:layout_alignParentBottom="true" />
            
        </RelativeLayout>
        
    </ScrollView>
        
</RelativeLayout>
