<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signUpForCommonPage_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg" >

    <com.byecar.views.TitleBar
        android:id="@+id/signUpForCommonPage_titleBar"
        android:layout_width="match_parent"
    	android:layout_height="0dp" />
    
    <ScrollView
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/signUpForCommonPage_titleBar"
    	android:fillViewport="true" >
        
        <RelativeLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content" >
    		
            <TextView 
		        android:id="@+id/signUpForCommonPage_tvProfileTitle"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />

            <FrameLayout
                android:id="@+id/signUpForCommonPage_profileFrame"
                android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_below="@id/signUpForCommonPage_tvProfileTitle"
		        android:layout_centerHorizontal="true" >
                
                <Button
                    android:id="@+id/signUpForCommonPage_btnProfile"
                    android:layout_width="match_parent"
		        	android:layout_height="match_parent"
		        	android:background="@drawable/sign1_picture_btn" />
                
                <ImageView
                    android:id="@+id/signUpForCommonPage_ivProfile"
                    android:layout_width="match_parent"
		        	android:layout_height="match_parent"
		        	android:scaleType="centerCrop" />
                
                <View
                    android:layout_width="match_parent"
		        	android:layout_height="match_parent"
		        	android:background="@drawable/sign1_frame" />
                
            </FrameLayout>
            
            <TextView
		        android:id="@+id/signUpForCommonPage_tvProfile"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/touchCameraIcon"
		        android:textColor="#000"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForCommonPage_profileFrame" />
            
            <TextView 
		        android:id="@+id/signUpForCommonPage_tvCommonInfo"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/signUpForCommonPage_tvProfile"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />
		    
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/signUpForCommonPage_etEmail"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForCommonPage_tvCommonInfo" />
		    
		    <TextView
		        android:id="@+id/signUpForCommonPage_tvCheckEmail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/signUpForCommonPage_etEmail"
		        android:layout_above="@id/signUpForCommonPage_etEmail" />
		    
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/signUpForCommonPage_etNickname"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForCommonPage_etEmail" />
		    
		    <TextView
		        android:id="@+id/signUpForCommonPage_tvCheckNickname"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/signUpForCommonPage_etNickname"
		        android:layout_above="@id/signUpForCommonPage_etNickname" />
		        
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/signUpForCommonPage_etPw"
		        android:layout_width="0dp"
		        android:layout_height="0dp" 
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForCommonPage_etNickname" />
		    
			<TextView
		        android:id="@+id/signUpForCommonPage_tvCheckPw"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:text="@string/checkPassword"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/signUpForCommonPage_etPw"
		        android:layout_above="@id/signUpForCommonPage_etPw" />
		    
		    <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
		        android:id="@+id/signUpForCommonPage_etPwConfirm"
		        android:layout_width="0dp"
		        android:layout_height="0dp" 
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForCommonPage_etPw" />

			<TextView
		        android:id="@+id/signUpForCommonPage_tvCheckPwConfirm"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:layout_marginBottom="-5dp"
		        android:visibility="invisible"
		        android:text="@string/checkPasswordConfirm"
		        android:textColor="#ff4b4b"
		        android:layout_alignRight="@id/signUpForCommonPage_etPwConfirm"
		        android:layout_above="@id/signUpForCommonPage_etPwConfirm" />
		    		
		    <Button 
		        android:id="@+id/signUpForCommonPage_btnSignUp"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:background="@drawable/sign1_signup_btn" 
		        android:layout_centerHorizontal="true"
		        android:layout_alignParentBottom="true" />
            
        </RelativeLayout>
        
    </ScrollView>
        
</RelativeLayout>
